@@ -110,6 +110,7 @@ class OvmsVehicleSmartEQ : public OvmsVehicle
     void Notify12Vcharge();
     void NotifySOClimit();
     void DoorLockState();
+    void WifiAP2Client();
     void WifiRestart();
     void ModemRestart();
     void ModemEventRestart(std::string event, void* data);
@@ -336,6 +337,8 @@ public:
     int m_v2_ticker;
     int m_modem_ticker;
     int m_park_timeout_secs;                //!< parking timeout in seconds
+    int m_ap2client;                        //!< Wifi Mode APClient to client timeout in minutes
+    bool m_ap2clienton;                     //!< Wifi Mode APClient
   
   protected:
     poll_vector_t       m_poll_vector;              // List of PIDs to poll
